--- a/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
+++ b/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
@@ -80,6 +80,21 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
+                        <wm-tile width="240px" height="160px" class="bg-primary" accessroles="InspectorManager,MunicipalityAdmin,CXAdmin" on-click="Variables.goToPage_AllMunicipalityInspections.invoke()" name="tile6">
+                            <wm-layoutgrid height="100%" name="layoutgrid7_1">
+                                <wm-gridrow height="100%" name="gridrow10">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn22_1">
+                                        <wm-icon iconsize="3em" iconclass="wi wi-event-note" name="icon6"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn23">
+                                        <wm-label caption="All Inspections" class="p" fontsize="1.5" fontunit="em" name="label12"></wm-label>
+                                        <wm-label caption="bind:Variables.svMunicipalityInspectionCount.dataSet.inspectionsCount" fontsize="3" fontunit="em" class="p" name="label13"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center">
                         <wm-tile name="tileScheduleInspections" width="240px" height="160px" class="bg-primary" accessroles="InspectorManager,MunicipalityAdmin,CXAdmin" on-click="Variables.goToPage_ScheduleInspections.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid6">
@@ -90,21 +105,6 @@
                                     <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn25_1" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Inspection Assignment" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label caption="bind:Variables.svCountInspectionsToBeScheduledByMunicipality.dataSet[$i].inspectionsToBeScheduled" fontsize="3" fontunit="em" class="p" name="label14"></wm-label>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                            </wm-layoutgrid>
-                        </wm-tile>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" accessroles="InspectorManager,MunicipalityAdmin,CXAdmin" on-click="Variables.goToPage_AllMunicipalityInspections.invoke()" name="tile6">
-                            <wm-layoutgrid height="100%" name="layoutgrid7_1">
-                                <wm-gridrow height="100%" name="gridrow10">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn22_1">
-                                        <wm-icon iconsize="3em" iconclass="wi wi-all-out" name="icon6"></wm-icon>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn23">
-                                        <wm-label caption="All Inspections" class="p" fontsize="1.5" fontunit="em" name="label12"></wm-label>
-                                        <wm-label caption="bind:Variables.svMunicipalityInspectionCount.dataSet.inspectionsCount" fontsize="3" fontunit="em" class="p" name="label13"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
