--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -85,7 +85,7 @@
                             <wm-layoutgrid height="100%" name="layoutgrid10">
                                 <wm-gridrow height="100%" name="gridrow13">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn28" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-assignment"></wm-icon>
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-library-books"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn29" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Municipality Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
