AllMuniInsp- fixed formatting for Date Assigned field viewForm- updated text on Inspections tab CXAdmin- remoed tiles that were duplicates from MuniAdmin dashboard, removed unbuilt tile count from CXRoles tile Files modified - [_viewForm,CXAdmin,AllMunicipalityInspections]

--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -296,8 +296,8 @@
                                     <wm-layoutgrid name="layoutgrid15">
                                         <wm-gridrow name="gridrow56">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn117">
-                                                <wm-label padding="unset 0.5em" name="label27" caption="If your form requires inspections, you can request to schedule an inspection here."></wm-label>
-                                                <wm-label padding="unset 0.5em" name="label58" caption="Please contact the municipality directly if you need an inspection removed, if you requested the wrong inspection, or with any questions related to inspections."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label27" caption="If your form requires inspections, you can submit a request for the municipality to schedule your inspection here."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label58" caption="Please contact the municipality directly with any questions related to inspections."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow57">
@@ -322,7 +322,7 @@
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow83">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn155_3" horizontalalign="center">
-                                                <wm-label padding="unset 0.5em" name="label91" caption="Sorry, inspections can not be scheduled while the form is in the current status. Please check back later." show="bind:!(Variables.CurrentForm.firstRecord.formStatuses.allowInspections)"
+                                                <wm-label padding="unset 0.5em" name="label91" caption="Sorry, inspections can not be requested while the form is in the current status. Please check back later." show="bind:!(Variables.CurrentForm.firstRecord.formStatuses.allowInspections)"
                                                 fontweight="bold" color="red"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
