--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -43,9 +43,8 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn22" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-contacts"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn23" class="col-xs-9">
+                                    <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" name="gridcolumn23" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Roles" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -100,36 +99,6 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn20" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageForms.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid5">
-                                <wm-gridrow height="100%" name="gridrow6_1">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn13_1" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-assignment"></wm-icon>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn14_1" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Forms" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.CXAdminFormsCount.dataSet.value" fontsize="3" fontunit="em" class="p"></wm-label>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                            </wm-layoutgrid>
-                        </wm-tile>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageInspections.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid11">
-                                <wm-gridrow height="100%" name="gridrow14">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn31" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-find-in-page"></wm-icon>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn32" class="col-xs-9">
-                                        <wm-label name="tileTitleInsp" caption="CX Inspections" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.CXAdminInspectionsCount.dataSet.value" fontsize="3" fontunit="em" class="p"></wm-label>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                            </wm-layoutgrid>
-                        </wm-tile>
-                    </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn19" horizontalalign="center" padding="2em unset">
                         <wm-tile width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_CXCodeSets.invoke()" name="tile11">
                             <wm-layoutgrid height="100%" name="layoutgrid12">
@@ -145,9 +114,7 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow13">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn28" padding="2em unset" horizontalalign="center">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn20" horizontalalign="center" padding="2em unset">
                         <wm-tile width="240px" height="160px" class="bg-primary" name="tile6" on-click="Variables.goToPage_CXGlobalSettings.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid7">
                                 <wm-gridrow height="100%" name="gridrow8">
@@ -161,6 +128,10 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" horizontalalign="center" padding="2em unset"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow13">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn28" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn29" horizontalalign="center" padding="2em unset"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn30" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
                 </wm-gridrow>
