--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -137,6 +137,43 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow20">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn33" padding="unset unset 1em unset">
+                        <wm-panel iconclass="wi wi-user" title="Contractor Managment" class="panel-primary" name="panelContractorManagment">
+                            <wm-layoutgrid name="layoutgrid6_1">
+                                <wm-gridrow padding="1em unset unset unset" name="gridrow21">
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn34">
+                                        <wm-composite name="composite11">
+                                            <wm-checkbox caption="Auto Approve Contractors" class="col-md-push-3 col-md-9" name="checkboxAutoApproveContractors" checkedvalue="true" uncheckedvalue="false" datavalue="bind:Variables.SelectedMunicipalityObj.firstRecord.autoApproveContractors"></wm-checkbox>
+                                        </wm-composite>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn36_1"></wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow25" padding="1em unset">
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn46">
+                                        <wm-composite name="composite12">
+                                            <wm-checkbox caption="Separate Contractor Application Required" class="col-md-push-3 col-md-9" name="checkboxSeparateContractorApplic" checkedvalue="true" uncheckedvalue="false" datavalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].separateContractorApplicationRequired"></wm-checkbox>
+                                        </wm-composite>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn47">
+                                        <wm-composite name="composite13" show="bind:Widgets.checkboxSeparateContractorApplic.datavalue">
+                                            <wm-label class="col-md-3 control-label" name="label18" caption="Select Form"></wm-label>
+                                            <wm-container class="col-md-9" name="container11">
+                                                <wm-select name="selectForm" dataset="bind:Variables.svFormTypesForMunicipalitySettings.dataSet" datafield="id" displayfield="formType" datavalue="bind:Variables.svFormTypesForMunicipalitySettings.firstRecord.id"></wm-select>
+                                            </wm-container>
+                                        </wm-composite>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow26">
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn48"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn49_2" horizontalalign="right">
+                                        <wm-button class="btn-primary" caption="Save" type="button" margin="unset 2em unset unset" iconclass="wi wi-save" name="buttonContractorDetails" on-click="Variables.svUpdateContractorManagementSettings.invoke()"></wm-button>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow42">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn52_2">
                         <wm-panel iconclass="wi wi-photo" name="panel4" title="Municipality Logo" class="panel-primary">
