--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -11,7 +11,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow25_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn57_1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn57_1" padding="unset unset 1em unset">
                         <wm-label name="label2_1" caption="bind:'Edit Form: ' + Variables.CurrentFormObj.dataSet.data[$i].formType + ' (' + Variables.CurrentFormObj.dataSet.data[$i].municipalities.municipalityName + ')'" fontweight="bold" class="h4"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
